# sample-rust-multithread-lambda

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  template.yaml
scripts/: burst_test.sh  cloudwatch_metrics.sh  comprehensive_test.sh  validation_test.sh
src/: handler.rs  main.rs
